--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "webpack-dev-server": "4.0.0-beta.0"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "webpack-php-loader": "^0.5.0"
   }
 }
